--- a/5.1 DOM e Seletores JS/exercicios.html
+++ b/5.1 DOM e Seletores JS/exercicios.html
@@ -39,23 +39,24 @@
       </div>
     </div>
     <script>
-        /*
-        Aqui você vai modificar os elementos já existentes utilizando apenas as funções:
-        - document.getElementById()
-        - document.getElementsByClassName()
-        - document.getElementsByTagName()
- Crie uma função que mude o texto na tag <p> para uma descrição de como você se vê daqui a 2 anos. (Não gaste tempo pensando no texto e sim realizando o exercício)
- Crie uma função que mude a cor do quadrado amarelo para o verde da Trybe.
- Crie uma função que mude a cor do quadrado vermelho para branco.
- Crie uma função que corrija o texto da tag <h1>.
- Crie uma função que modifique todo o texto da tag <p> para maiúsculo.
- Crie uma função que exiba o conteúdo de todas as tags <p> no console.
-        */
+/*
+Aqui você vai modificar os elementos já existentes utilizando apenas as funções:
+- document.getElementById()
+- document.getElementsByClassName()
+- document.getElementsByTagName()
+ 1. Crie uma função que mude o texto na tag <p> para uma descrição de como você se vê daqui a 2 anos. (Não gaste tempo pensando no texto e sim realizando o exercício)
+ 2. Crie uma função que mude a cor do quadrado amarelo para o verde da Trybe.
+ 3. Crie uma função que mude a cor do quadrado vermelho para branco.
+ 4. Crie uma função que corrija o texto da tag <h1>.
+ 5. Crie uma função que modifique todo o texto da tag <p> para maiúsculo.
+ 6. Crie uma função que exiba o conteúdo de todas as tags <p> no console.
+*/
+
 //Exercício1
 
 function changeText(){
 let paragraph = document.getElementsByTagName('p')[0];
-paragraph.innerHTML = "Tiago blablabla"
+paragraph.innerHTML = "Tiago estará empregado como desenvolvedor and god is my witness"
 }
 
 changeText();
@@ -63,8 +64,8 @@ changeText();
 //Exercício2
 
 function changeColor(){
-let color = document.getElementsByClassName('.main-content')[0];
-color.style.backgroundColor = green
+let color = document.getElementsByClassName('main-content')[0];
+color.style.backgroundColor = 'green'
 }
 
 changeColor();
