--- a/5.1 DOM e Seletores JS/exercicios.html
+++ b/5.1 DOM e Seletores JS/exercicios.html
@@ -70,6 +70,24 @@ color.style.backgroundColor = 'green'
 
 changeColor();
 
+//Exercício3
+
+function changeColorCenter(){
+let colorCenter = document.getElementsByClassName('center-content')[0];
+colorCenter.style.backgroundColor = 'white'
+}
+
+changeColorCenter();
+
+//Exercício4
+
+function changeTextH1(){
+let textH1 = document.getElementsByClassName('title')[0];
+textH1.innerHTML = "Exercício 5.1 - JavaScript"
+}
+
+changeTextH1();
+
     </script>
   </body>
 </html>
