--- a/5.2 Javascript-Trabalhando com elementos/exercises/5_2/exercicios.html
+++ b/5.2 Javascript-Trabalhando com elementos/exercises/5_2/exercicios.html
@@ -55,9 +55,15 @@
       }
     </style>
   </head>
-  <body>
+  <body id="body">
     <script>
       // COLOQUE SEU CÓDIGO AQUI
+
+      //Exercício 1 
+      let h1 = document.createElement("h1")
+      h1.innerHTML = "Exercício 5.2 - JavaScript DOM"
+      document.getElementById("body").appendChild(h1);
+
     </script>
   </body>
 </html>
