--- a/5.2 Javascript-Trabalhando com elementos/exercises/5_2/exercicios.html
+++ b/5.2 Javascript-Trabalhando com elementos/exercises/5_2/exercicios.html
@@ -60,9 +60,16 @@
       // COLOQUE SEU CÓDIGO AQUI
 
       //Exercício 1 
-      let h1 = document.createElement("h1")
-      h1.innerHTML = "Exercício 5.2 - JavaScript DOM"
+      let h1 = document.createElement("h1");
+      h1.innerHTML = "Exercício 5.2 - JavaScript DOM";
       document.getElementById("body").appendChild(h1);
+
+      //Exercício 2 
+
+      const elementDivMain = document.createElement('div');
+      elementDivMain.className = 'main-content';
+      document.body.appendChild(elementDivMain);
+
 
     </script>
   </body>
