--- a/5.2 Javascript-Trabalhando com elementos/exercises/5_2/exercicios.html
+++ b/5.2 Javascript-Trabalhando com elementos/exercises/5_2/exercicios.html
@@ -66,9 +66,11 @@
 
       //Exercício 2 
 
-      const elementDivMain = document.createElement('div');
-      elementDivMain.className = 'main-content';
-      document.body.appendChild(elementDivMain);
+      let div = document.createElement("div");
+      div.className = "main-content";
+      document.getElementById("body").appendChild(div);
+
+      
 
 
     </script>
