--- a/5.2 Javascript-Trabalhando com elementos/exercises/5_2/exercicios.html
+++ b/5.2 Javascript-Trabalhando com elementos/exercises/5_2/exercicios.html
@@ -66,11 +66,17 @@
 
       //Exercício 2 
 
-      let div = document.createElement("div");
-      div.className = "main-content";
-      document.getElementById("body").appendChild(div);
+      let divMain = document.createElement("div");
+      divMain.className = "main-content";
+      document.getElementById("body").appendChild(divMain);
 
-      
+      //Exercício 3
+
+      let divCenter = document.createElement("div");
+      divCenter.className = "center-content";
+      divMain.appendChild(divCenter);
+
+
 
 
     </script>
