--- a/5.2 Javascript-Trabalhando com elementos/exercises/5_2/exercicios.html
+++ b/5.2 Javascript-Trabalhando com elementos/exercises/5_2/exercicios.html
@@ -76,6 +76,12 @@
       divCenter.className = "center-content";
       divMain.appendChild(divCenter);
 
+      //Exercício 4
+
+      let p = document.createElement("p");
+      p.innerHTML = "VQV Trybers!"
+      divCenter.appendChild(p);
+
 
 
 
