--- a/5.2 Javascript-Trabalhando com elementos/exercises/5_2/exercicios.html
+++ b/5.2 Javascript-Trabalhando com elementos/exercises/5_2/exercicios.html
@@ -82,6 +82,14 @@
       p.innerHTML = "VQV Trybers!"
       divCenter.appendChild(p);
 
+      //Exercício 5
+
+      let divLeft = document.createElement("div")
+      divLeft.className = "left-content";
+      divMain.appendChild(divLeft);
+
+
+
 
 
 
