--- a/5.2 Javascript-Trabalhando com elementos/exercises/5_2/exercicios.html
+++ b/5.2 Javascript-Trabalhando com elementos/exercises/5_2/exercicios.html
@@ -88,9 +88,11 @@
       divLeft.className = "left-content";
       divMain.appendChild(divLeft);
 
+      //Exercício 6
 
-
-
+      let divRight = document.createElement("div")
+      divLeft.className = "right-content";
+      divMain.appendChild(divRight);
 
 
     </script>
