--- a/5.2 Javascript-Trabalhando com elementos/exercises/5_2/exercicios.html
+++ b/5.2 Javascript-Trabalhando com elementos/exercises/5_2/exercicios.html
@@ -91,8 +91,16 @@
       //Exercício 6
 
       let divRight = document.createElement("div")
-      divLeft.className = "right-content";
+      divRight.className = "right-content";
       divMain.appendChild(divRight);
+
+      //Exercícios 7
+      
+      let img = document.createElement("img")
+      img.src="https://picsum.photos/200"
+      img.className = "small-image"
+      divLeft.appendChild(img);
+
 
 
     </script>
