--- a/5.2 Javascript-Trabalhando com elementos/exercises/5_2/exercicios.html
+++ b/5.2 Javascript-Trabalhando com elementos/exercises/5_2/exercicios.html
@@ -105,14 +105,19 @@
       let list = document.createElement("ul")
       divRight.appendChild(list); 
       let array = ["um", "dois", "três", "quatro", "cinco", "seis", "sete", "oito", "nove", "dez"];
-      for (let index = 0; index <= 10; index++) {
+      for (let index = 0; index < 10; index++) {
         let unnamedList = document.createElement("li")
         unnamedList.innerHTML = array[index];
         list.appendChild(unnamedList);
       }
-    
-      
 
+      //Exercício 9 
+      let h31 = document.createElement("h3")
+      let h32 = document.createElement("h3")
+      let h33 = document.createElement("h3")
+      divMain.appendChild(h31)
+      divMain.appendChild(h32)
+      divMain.appendChild(h33)
 
     </script>
   </body>
