--- a/5.2 Javascript-Trabalhando com elementos/exercises/5_2/exercicios.html
+++ b/5.2 Javascript-Trabalhando com elementos/exercises/5_2/exercicios.html
@@ -58,7 +58,7 @@
   <body id="body">
     <script>
       // COLOQUE SEU CÓDIGO AQUI
-
+      //Pt.1 
       //Exercício 1 
       let h1 = document.createElement("h1");
       h1.innerHTML = "Exercício 5.2 - JavaScript DOM";
@@ -118,6 +118,11 @@
       divMain.appendChild(h31)
       divMain.appendChild(h32)
       divMain.appendChild(h33)
+
+      //Pt. 2
+      //Exercício 1
+
+      h1.className = "title"
 
     </script>
   </body>
