--- a/5.2 Javascript-Trabalhando com elementos/exercises/5_2/exercicios.html
+++ b/5.2 Javascript-Trabalhando com elementos/exercises/5_2/exercicios.html
@@ -124,6 +124,13 @@
 
       h1.className = "title"
 
+      //Exercício 2
+
+      h31.className = "description"
+      h32.className = "description"
+      h33.className = "description"
+
+
     </script>
   </body>
 </html>
