--- a/5.2 Javascript-Trabalhando com elementos/exercises/5_2/exercicios.html
+++ b/5.2 Javascript-Trabalhando com elementos/exercises/5_2/exercicios.html
@@ -130,6 +130,9 @@
       h32.className = "description"
       h33.className = "description"
 
+      //Exercício 3
+
+      divMain.removeChild(divLeft)
 
     </script>
   </body>
