--- a/5.2 Javascript-Trabalhando com elementos/exercises/5_2/exercicios.html
+++ b/5.2 Javascript-Trabalhando com elementos/exercises/5_2/exercicios.html
@@ -134,6 +134,10 @@
 
       divMain.removeChild(divLeft)
 
+      //Exercício 4
+
+      divMain.style.marginRight='auto';
+
     </script>
   </body>
 </html>
