--- a/5.2 Javascript-Trabalhando com elementos/exercises/5_2/exercicios.html
+++ b/5.2 Javascript-Trabalhando com elementos/exercises/5_2/exercicios.html
@@ -138,6 +138,9 @@
 
       divMain.style.marginRight='auto';
 
+      //Exercício 5
+      divCenter.parentNode.style.backgroundColor = "green"
+
     </script>
   </body>
 </html>
