--- a/5.2 Javascript-Trabalhando com elementos/exercises/5_2/exercicios.html
+++ b/5.2 Javascript-Trabalhando com elementos/exercises/5_2/exercicios.html
@@ -141,6 +141,12 @@
       //Exercício 5
       divCenter.parentNode.style.backgroundColor = "green"
 
+      //Exercício 6
+
+      list.lastChild.remove();
+      list.lastChild.remove();
+
+
     </script>
   </body>
 </html>
