--- a/6.2_Bibliotecas_JavaScript_e_Frameworks_CSS/exercises/6_2/index.html
+++ b/6.2_Bibliotecas_JavaScript_e_Frameworks_CSS/exercises/6_2/index.html
@@ -9,32 +9,32 @@
 </head>
 <body>
 <form name= "myform" id= "myform" method="POST"> 
-        <h1>Formulário de Currículo</h1>
+        <h1 class="display-4 text-muted">Formulário de Currículo</h1>
         <fieldset id="personalData">
             <legend>Dados Pessoais</legend>
-            <div>
+            <div class="form-group container">
                 <label for="name">Nome</label>
-                <input type="text" name="name" id="name" required="required" maxlength="40">
+                <input class="form-control" type="text" name="name" id="name" required="required" maxlength="40">
             </div>
-            <div>
+            <div class="form-group container">
                 <label for="email">E-mail</label>
-                <input type="email" name="email" id="email" required="required" maxlength="50">
+                <input class="form-control" type="email" name="email" id="email" required="required" maxlength="50">
             </div> 
-            <div>
+            <div class="form-group container">
                 <label for="cpf">CPF</label>
-                <input type="text" id="cpf" required="required" maxlength="11">
+                <input class="form-control" type="text" id="cpf" required="required" maxlength="11">
             </div>
-            <div>
+            <div class="form-group container">
                 <label for="address">Endereço</label>
-                <input type="text" id="address" required="required" maxlength="200">
+                <input class="form-control" type="text" id="address" required="required" maxlength="200">
             </div>
-            <div>
+            <div class="form-group container">
                 <label for="city">Cidade</label>
-                <input type="text" id="city" required="required" maxlength="28">
+                <input class="form-control" type="text" id="city" required="required" maxlength="28">
             </div>
-            <div>
+            <div class="form-group container">
                 <label for="state">Estado</label>
-                <select required="required" name="states"id="state">
+                <select class="form-control" required="required" name="states"id="state">
                     <option value="AC">Acre</option>
                     <option value="AL">Alagoas</option>
                     <option value="AP">Amapá</option>
@@ -64,36 +64,38 @@
                     <option value="TO">Tocantins</option>
                 </select><br><br>
             </div>
-            <div>
-                <input type="radio" name="place" id="place">
+            <div class="form-group container">
+                <input class="form-control" type="radio" name="place" id="place">
                 <label for="casa"><span>Casa</span></label>
-                <input type="radio" name="place" id="place">
+                <input class="form-control" type="radio" name="place" id="place">
                 <label for="apartamento"><span>Apartamento</span></label>
             </div>
         </fieldset>
         <fieldset>
             <legend>Dados Profissionais</legend>
-            <div>
-                <textarea name="textArea" id="textArea" cols="30" rows="10" maxlength="1000" required="required"></textarea>
+            <div class="form-group container">
+                <textarea class="form-control" name="textArea" id="textArea" cols="30" rows="10" maxlength="1000" required="required"></textarea>
             </div>
-            <div>
-                <label for="role">role</label>
-                <input type="text" name="role" id="role" required="required" maxlength="40">
+            <div class="form-group container">
+                <label for="role">Cargo</label>
+                <input class="form-control" type="text" name="role" id="role" required="required" maxlength="40">
             </div>
-            <div>
-                <label for="roleDesc">Descrição do role</label>
-                <input type="text" name="roleDesc" id="roleDesc" required="required" maxlength="500">
+            <div class="form-group container">
+                <label for="roleDesc">Descrição do Cargo</label>
+                <input class="form-control" type="text" name="roleDesc" id="roleDesc" required="required" maxlength="500">
             </div>
-            <div>
+            <div class="form-group container">
                 <label for="startDate">Data de início</label>
-                <input type="date" name="startDate" id="startDate" required="required">
+                <input class="form-control" type="date" name="startDate" id="startDate" required="required">
             </div>
         </fieldset>
-        <input type="reset" onclick="clearDiv()" value="Limpar" >
-        <input type = "button" name="button" onclick="check()" value="Enviar">
+        <input class="btn btn-success" type="reset" onclick="clearDiv()" value="Limpar" >
+        <input class="btn btn-success" type = "button" name="button" onclick="check()" value="Enviar">
     </form>
-    <div id="print"></div>
-    <script src="/script.js"></script>
+    <div class="form-group" id="print"></div>
+    <script type="text/javascript" src="./bootstrap-4.5.0-dist/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="./jquery-3.5.1.min.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
 
