--- a/6.2_Bibliotecas_JavaScript_e_Frameworks_CSS/exercises/6_2/index.html
+++ b/6.2_Bibliotecas_JavaScript_e_Frameworks_CSS/exercises/6_2/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercícios Bloco 6.1</title>
     <link rel="stylesheet" href="./bootstrap-4.5.0-dist/css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="./DatePickerX-master/dist/css/DatePickerX.min.css">
     <link rel="stylesheet" href="./styles.css">
+    <script src="./DatePickerX-master/dist/js/DatePickerX.min.js"></script>
 </head>
 <body>
 <form name= "myform" id= "myform" method="POST"> 
@@ -86,7 +88,7 @@
             </div>
             <div class="form-group container">
                 <label for="startDate">Data de início</label>
-                <input class="form-control" type="date" name="startDate" id="startDate" required="required">
+                <input class="form-control" type="text" name="startDate" id="startDate" required="required">
             </div>
         </fieldset>
         <input class="btn btn-success" type="reset" onclick="clearDiv()" value="Limpar" >
@@ -98,20 +100,3 @@
     <script src="./script.js"></script>
 </body>
 </html>
-
-
-<!-- 
-<script type="text/javascript" src="js/jquery-3.5.1.min.js"></script>
-<script type="text/javascript" src="js/bootstrap.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/pikaday/pikaday.js"></script>
-<script>
-    var picker = new Pikaday({
-        field: $('#datepicker')[0],
-        format: 'Do MMMM YYYY',
-    });
-</script>
-
-
-
-<link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
-<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/pikaday/css/pikaday.css"> -->
