--- a/6.2_Bibliotecas_JavaScript_e_Frameworks_CSS/exercises/6_2/index.html
+++ b/6.2_Bibliotecas_JavaScript_e_Frameworks_CSS/exercises/6_2/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-<form name= "myform" id= "myform" class="js-form" method="POST"> 
+<form name= "myform" id= "myform" class="js-form form" method="POST"> 
         <h1 class="display-4 text-muted">Formulário de Currículo</h1>
         <fieldset id="personalData">
             <legend>Dados Pessoais</legend>
@@ -23,15 +23,15 @@
             </div> 
             <div class="form-group container">
                 <label for="cpf">CPF</label>
-                <input class="form-control" type="text" id="cpf" required="required" maxlength="11">
+                <input class="form-control" data-validate-field="cpf" type="text" id="cpf" required="required" maxlength="11">
             </div>
             <div class="form-group container">
                 <label for="address">Endereço</label>
-                <input class="form-control" type="text" id="address" required="required" maxlength="200">
+                <input class="form-control" data-validate-field="address" type="text" id="address" required="required" maxlength="200">
             </div>
             <div class="form-group container">
                 <label for="city">Cidade</label>
-                <input class="form-control" type="text" id="city" required="required" maxlength="28">
+                <input class="form-control" data-validate-field="city" type="text" id="city" required="required" maxlength="28">
             </div>
             <div class="form-group container">
                 <label for="state">Estado</label>
@@ -79,11 +79,11 @@
             </div>
             <div class="form-group container">
                 <label for="role">Cargo</label>
-                <input class="form-control" type="text" name="role" id="role" required="required" maxlength="40">
+                <input class="form-control" data-validate-field="text" type="text" name="role" id="role" required="required" maxlength="40">
             </div>
             <div class="form-group container">
                 <label for="roleDesc">Descrição do Cargo</label>
-                <input class="form-control" type="text" name="roleDesc" id="roleDesc" required="required" maxlength="500">
+                <input class="form-control" data-validate-field="text" type="text" name="roleDesc" id="roleDesc" required="required" maxlength="500">
             </div>
             <div class="form-group container">
                 <label for="startDate">Data de início</label>
@@ -91,9 +91,9 @@
             </div>
         </fieldset>
         <input class="btn btn-success" type="reset" onclick="clearDiv()" value="Limpar" >
-        <input class="btn btn-success" type = "button" name="button" onclick="check()" value="Enviar">
+        <input class="btn btn-success" type="submit" name="button" value="Enviar">
+        <div class="form-group" id="print"></div>
     </form>
-    <div class="form-group" id="print"></div>
     <script src="./js/DatePickerX.min.js"></script>
     <script src="./js/just-validate.min.js"></script>
     <script src="./js/script.js"></script>
