--- a/6.2_Bibliotecas_JavaScript_e_Frameworks_CSS/exercises/6_2/index.html
+++ b/6.2_Bibliotecas_JavaScript_e_Frameworks_CSS/exercises/6_2/index.html
@@ -66,9 +66,9 @@
                 </select><br><br>
             </div>
             <div class="form-group container">
-                <input class="form-control" type="radio" name="place" id="place">
+                <input class="form-control" type="radio" name="place" id="place" value="casa">
                 <label for="casa"><span>Casa</span></label>
-                <input class="form-control" type="radio" name="place" id="place">
+                <input class="form-control" type="radio" name="place" id="place" value="apartamento">
                 <label for="apartamento"><span>Apartamento</span></label>
             </div>
         </fieldset>
