Exercicio em grupo do modulo 26.5

--- a/26.5_NodeJS_atividade_em_grupo/index.html
+++ b/26.5_NodeJS_atividade_em_grupo/index.html
@@ -8,12 +8,19 @@
   <style>
     body {
       height: 100vh;
-      background: linear-gradient(45deg, whitesmoke, green)
+      background: linear-gradient(45deg, #036b52, whitesmoke);
+      text-align: center
+    }
+    ul {
+      list-style-type: none;
     }
   </style>
 </head>
 <body>
   <div>
+    <img 
+    src="./Images/9814df697eaf49815d7df109110815ff887b3457.png"
+    width="100" height="75">
     <h2 id="username"></h2>
     <ul id="user"></ul>
   </div>
