Exercicio em grupo do modulo 26.5

--- a/26.5_NodeJS_atividade_em_grupo/index.html
+++ b/26.5_NodeJS_atividade_em_grupo/index.html
@@ -26,7 +26,7 @@
   </div>
   <script>
     async function getUser() {
-      const response = await fetch("http://localhost:3000/user/antonio");
+      const response = await fetch("http://localhost:3000/user/rodrigo");
       const data = await response.json();
       const divElement = document.getElementById("user")
       const h1Element = document.getElementById('username')
