--- a/26.5_NodeJS_atividade_em_grupo/index.html
+++ b/26.5_NodeJS_atividade_em_grupo/index.html
@@ -19,7 +19,7 @@
 <body>
   <div>
     <img 
-    src="./Images/9814df697eaf49815d7df109110815ff887b3457.png"
+    src="./Images/trybe.png"
     width="100" height="75">
     <h2 id="username"></h2>
     <ul id="user"></ul>
